fsnpydir = $(pkgdatadir)/python3

dist_bin_SCRIPTS = fsnview

dist_pkgdata_SCRIPTS = \
  analyze.sh \
  analyze_with_fiwalk.sh \
  analyze_with_py360.sh \
  analyze_with_uxtaf.sh \
  demo_mac_timeline.py \
  nversion.mk \
  report.sh \
  compare.sh

dist_fsnpy_SCRIPTS = \
  dfxml.py \
  fiwalk.py \
  idifference.py \
  log_and_run_script.sh \
  make_diff_stats.py \
  make_summary_stats.py \
  report.py
