fsnpydir = $(pkgdatadir)/python3

dist_bin_SCRIPTS = fsnview

dist_pkgdata_SCRIPTS = \
  analyze_with_fiwalk.sh \
  analyze_with_py360.sh \
  analyze_with_uxtaf.sh \
  demo_mac_timeline.py \
  log_and_run_script.sh \
  compare.sh

dist_fsnpy_SCRIPTS = \
  cat_partitions.py \
  dfxml.py \
  fiwalk.py \
  idifference.py \
  make_diff_stats.py \
  make_differential_dfxml.py \
  make_summary_stats.py \
  Objects.py \
  report.py \
  summarize_differential_dfxml.py
